Add brand colours

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -8,7 +8,12 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #27ae60;
+@brand-primary:                   #002C5B;
+@brand-primary-constrast:         #BF2F38;
+@brand-primary-muted:             #11BFDA;
+@brand-secondary-greyscale-dark:  #000000;
+@brand-secondary-greyscale-light: #EFEFEF;
+@brand-secondary-light:           #E2FAFE;
 
 
 // Glyphicons path
