--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -4,16 +4,20 @@
 @main-sm-columns:       @grid-columns;
 @sidebar-sm-columns:    4;
 
+// Colors
+// -------------------------
+@primary:                   #002C5B;
+@primary-contrast:          #BF2F38;
+@primary-muted:             #11BFDA;
+@secondary-greyscale-dark:  #000000;
+@secondary-greyscale-light: #EFEFEF;
+@secondary-light:           #E2FAFE;
 
 // Brand colors
 // -------------------------
-
-@brand-primary:                   #002C5B;
-@brand-primary-constrast:         #BF2F38;
-@brand-primary-muted:             #11BFDA;
-@brand-secondary-greyscale-dark:  #000000;
-@brand-secondary-greyscale-light: #EFEFEF;
-@brand-secondary-light:           #E2FAFE;
+// Bootstrap specific
+@brand-primary:                   @primary;
+@brand-info:                      @primary-muted;
 
 
 // Glyphicons path
