--- a/assets/less/layouts/_footer.less
+++ b/assets/less/layouts/_footer.less
@@ -1,1 +1,16 @@
-.content-info { }
+@import "../_variables";
+
+.content-info {
+  .footer-top-line {
+    width: 100%;
+    height: 1px;
+    background-color: @secondary-greyscale-light;
+  }
+  .footer-bottom-line {
+    width: 100%;
+    height: 8px;
+    background-color: @primary-contrast;
+  }
+  height: 100px;
+  background-color: @secondary-light;
+}
