Start on header

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -12,6 +12,7 @@
 @secondary-greyscale-dark:  #000000;
 @secondary-greyscale-light: #EFEFEF;
 @secondary-light:           #E2FAFE;
+@brand-font-color:          #666666;
 
 // Brand colors
 // -------------------------
