--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -1,1 +1,30 @@
-.banner { }
+@import "../_variables.less";
+
+.banner {
+  background-color:  @primary-muted;
+  border-color: @primary;
+
+  nav ul {
+    li a {
+      border-right: 1px solid @secondary-greyscale-dark;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      padding-top: 0px;
+      padding-bottom: 0px;
+    }
+    li:last-child a {
+      border-right: none;
+    }
+  }
+
+  .header-top-line {
+    width: 100%;
+    height: 8px;
+    background-color: @primary-contrast;
+  }
+
+  .header-background {
+    background-image: url("/app/themes/digimaker-roots/assets/img/header/DM-Header-1600x230.jpg");
+    height: 230px;
+  }
+}
